force-app/main/default/objects/Catalogue__c/Catalogue__c.object-meta.xml
<CustomObject>
    <label>Catalogue</label>
    <nameField>
        <label>Catalogue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>