force-app/main/default/objects/Catalogue__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <label>Benefits</label>
    <length>60768</length>
    <type>LongTextArea</type>
</CustomField>