force-app/main/default/objects/Catalogue__c/fields/Change_Policy__c.field-meta.xml
<CustomField>
    <fullName>Change_Policy__c</fullName>
    <label>Change Policy</label>
    <length>40768</length>
    <type>LongTextArea</type>
</CustomField>