force-app/main/default/objects/Catalogue__c/fields/City_Guide__c.field-meta.xml
<CustomField>
    <fullName>City_Guide__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City Guide</label>
    <referenceTo>City_Guide__c</referenceTo>
    <relationshipLabel>Catalogues</relationshipLabel>
    <relationshipName>Catalogues</relationshipName>
    <type>Lookup</type>
</CustomField>