force-app/main/default/objects/Catalogue__c/fields/House_Rules__c.field-meta.xml
<CustomField>
    <fullName>House_Rules__c</fullName>
    <label>House Rules</label>
    <length>60768</length>
    <type>LongTextArea</type>
</CustomField>