force-app/main/default/objects/Catalogue__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <length>60768</length>
    <type>LongTextArea</type>
</CustomField>