force-app/main/default/objects/Catalogue__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sun &amp; Beach</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>yoga</fullName>
            </value>
            <value>
                <fullName>Meditation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>