force-app/main/default/objects/Catalogue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Musem</fullName>
            </value>
            <value>
                <fullName>Yacht</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Beach Club</fullName>
            </value>
            <value>
                <fullName>Night Spot</fullName>
            </value>
            <value>
                <fullName>Fine Dinning</fullName>
            </value>
            <value>
                <fullName>Casual Dinning</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>