force-app/main/default/objects/Catalogue__c/recordTypes/Accommodation.recordType-meta.xml
<RecordType>
    <fullName>Accommodation</fullName>
    <active>true</active>
    <label>Accommodation</label>
</RecordType>