force-app/main/default/objects/Catalogue__c/recordTypes/Dining_Nightspots.recordType-meta.xml
<RecordType>
    <fullName>Dining_Nightspots</fullName>
    <active>true</active>
    <label>Dining &amp; Nightspots</label>
</RecordType>