force-app/main/default/objects/Catalogue__c/recordTypes/Excursion.recordType-meta.xml
<RecordType>
    <fullName>Excursion</fullName>
    <active>true</active>
    <label>Excursion</label>
</RecordType>