force-app/main/default/objects/Catalogue__c/recordTypes/Shopping.recordType-meta.xml
<RecordType>
    <fullName>Shopping</fullName>
    <active>true</active>
    <label>Shopping</label>
</RecordType>